RESOLVED FIXED232664
::slotted shouldn't match an active <slot>
https://bugs.webkit.org/show_bug.cgi?id=232664
Summary ::slotted shouldn't match an active <slot>
Antti Koivisto
Reported 2021-11-03 05:22:51 PDT
web-platform-tests/css/css-scoping/slotted-slot.html
Attachments
Patch (2.98 KB, patch)
2021-11-03 05:25 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2021-11-03 05:25:48 PDT
EWS
Comment 2 2021-11-03 09:40:47 PDT
Committed r285209 (243835@main): <https://commits.webkit.org/243835@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443193 [details].
Radar WebKit Bug Importer
Comment 3 2021-11-03 09:41:19 PDT
Note You need to log in before you can comment on or make changes to this bug.