::slotted shouldn't match an active <slot> https://bugs.webkit.org/show_bug.cgi?id=232664

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-scoping/slotted-slot-expected.txt:

Source/WebCore:

https://drafts.csswg.org/css-scoping/#slotted-pseudo

* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::checkOne const):

Avoid matching <slot>.



Canonical link: https://commits.webkit.org/243835@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285209 268f45cc-cd09-0410-ab3c-d52691b4dbfc